Añadidas negritas en htmls

--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@ subtitle: A tu disposición cuando lo necesites
 <section id="formularios">
 	<form class="contacto">
 		<p>
-			Si desea contactar personalmente con nosotros puede llamarnos a nuestro teléfono (24hs/7d) o bien rellenar el siguiente formulario:
+			Si desea contactar <b>personalmente</b> con nosotros puede llamarnos a nuestro teléfono (24hs/7d) o bien rellenar el siguiente formulario:
 		</p>
 		<div class="form-group">
 			<label>Nombre</label>
@@ -39,7 +39,7 @@ subtitle: A tu disposición cuando lo necesites
 	</form>
 	<form class="consulta">
 		<p>
-			Si desea realizar cualquier consulta, duda o pregunta puede hacerlo rellenando el siguiente formulario:
+			Si desea realizar cualquier <b>consulta, duda o pregunta</b> puede hacerlo rellenando el siguiente formulario:
 		</p>
 		<div class="form-group">
 			<label>Nombre (o sinónimo si lo prefiere)</label>
