--- a/cursos_talleres.html
+++ b/cursos_talleres.html
@@ -5,10 +5,10 @@ subtitle: La respuesta grupal
 ---
 <section class="intro">
 	<p>
-		Dentro de la sociedad actual en que vivimos, igual que en cualquier época, conviven numerosos entornos y situaciones diferentes, con retos, problemas, metas, o conflictos nuevos o antiguos, que tenemos que ir superando a lo largo de nuestra vida. La familia es la estructura fundamental en nuestra sociedad, pero en ella, a través de las diferentes épocas, se visualizan muchas de las situaciones que un adecuado acompañamiento psicológico con una buena utilización de la ciencia y técnica psicológica puede ayudar a resolver. Algunas de dichas situaciones son muy específicas e individuales y deben tratarse de manera individual y muy personalizada. Pero muchas otras, son muy generales y su atención puede ser adecuadamente realizada a través de un diseño más global, pero suficientemente efectivo.
+		Dentro de la <b>sociedad actual</b> en que vivimos, igual que en cualquier época, conviven <b>numerosos entornos y situaciones diferentes,</b> con retos, problemas, metas, o conflictos nuevos o antiguos, que tenemos que ir superando a lo largo de nuestra vida. <b>La familia es la estructura fundamental en nuestra sociedad,</b> pero en ella, a través de las diferentes épocas, se visualizan muchas de las situaciones que un adecuado acompañamiento psicológico con una buena utilización de la ciencia y técnica psicológica puede ayudar a resolver. Algunas de dichas situaciones son muy específicas e individuales y deben tratarse de manera individual y muy personalizada. Pero muchas otras, son muy generales y su atención puede ser adecuadamente realizada a través de un diseño más global, pero suficientemente efectivo.
 	</p>
 	<p>
-		Nuestro equipo ha seleccionado algunas de estas últimas situaciones problemáticas, dentro de nuestras áreas de intervención, infancia, adolescencia, pareja y familia, que requieren de una atención psicológica de tipo preventivo, educativo o simplemente informativo, y que pueden impartirse de manera grupal mediante diferentes diseños: conferencias, ciclos temáticos o talleres prácticos, en cualquier entorno físico adecuado: colegios, empresas, clínicas, asociaciones, etc., además de en nuestras instalaciones. Suelen ir dirigidas a colectivos genéricos: progenitores en general, padres, madres, adolescentes, niños, tutores, orientadores, personal docente, pediatras..., o más específicos, como madres embarazadas sin suficiente apoyo emocional. En PsicoNueve tenemos la opción de poder dar algunas de las anteriores conferencias ciclos temáticos y/o talleres prácticos en español, inglés o italiano, y podemos acompañar con el lenguaje de signos en español.
+		Nuestro equipo ha seleccionado algunas de estas últimas <b>situaciones problemáticas, dentro de nuestras áreas de intervención,</b> infancia, adolescencia, pareja y familia, que requieren de una <b>atención psicológica de tipo preventivo, educativo o simplemente informativo,</b> y que pueden impartirse de manera grupal mediante diferentes diseños: conferencias, ciclos temáticos o talleres prácticos, en cualquier entorno físico adecuado: colegios, empresas, clínicas, asociaciones, etc., además de en nuestras instalaciones. Suelen ir dirigidas a colectivos genéricos: progenitores en general, padres, madres, adolescentes, niños, tutores, orientadores, personal docente, pediatras..., o más específicos, como madres embarazadas sin suficiente apoyo emocional. En PsicoNueve tenemos la opción de poder dar algunas de las anteriores conferencias ciclos temáticos y/o talleres prácticos en <b>español, inglés o italiano, y podemos acompañar con el lenguaje de signos en español.</b>
 	</p>
 </section>
 <section id="recursos">
@@ -18,7 +18,7 @@ subtitle: La respuesta grupal
 				<div class="content">
 					<h2 class="title">Conferencias</h2>
 					<p>
-						Las conferencias son principalmente una presentación única durante un tiempo concreto (entre 50 a 150 minutos) sobre un tema específico, realizada normalmente por dos conferenciantes de PsicoNueve en interacción continua y complementándose entre ellos. Se pueden destacar las conferencias sobre Prevención en Trastornos de la Conducta Alimentaria,  con diferente contenido según se dirija a adolescentes o a padres y educadores. También la conferencia teórico-práctica sobre Conciliación de la vida familiar, profesional y laboral, con diferencias según se dirija a altos ejecutivos, autónomos o mandos intermedios.
+						Las conferencias son <b>principalmente una presentación única durante un tiempo concreto</b> (entre 50 a 150 minutos) <b>sobre un tema específico,</b> realizada normalmente por dos conferenciantes de PsicoNueve en interacción continua y complementándose entre ellos. Se pueden destacar las conferencias sobre <b>revención en Trastornos de la Conducta Alimentaria,</b> con diferente contenido según se dirija a adolescentes o a padres y educadores. También la conferencia teórico-práctica sobre <b> onciliación de la vida familiar, profesional y laboral,</b> con diferencias según se dirija a altos ejecutivos, autónomos o mandos intermedios.
 					</p>
 				</div>
 			</div>
@@ -28,7 +28,7 @@ subtitle: La respuesta grupal
 				<div class="content">
 					<h2 class="title">Ciclos temáticos</h2>
 					<p>
-						Los ciclos temáticos se componen de varias intervenciones o clases a lo largo del tiempo, con una continuidad lógica y acumulativa de los contenidos. Equivalen a varias conferencias o clases, con posiblemente diferentes conferenciantes de PsicoNueve, en las que el volumen del contenido de la materia o la profundidad y detalle de la información que se quiere transmitir requiere más tiempo que el de una conferencia única. Como más completo, dirigido a padres y personal docente incluimos el Ciclo Temático sobre la psicología y el comportamiento esperado en las diferentes etapas del desarrollo, desde bebé a adolescente. También destacan los dirigidos a personal docente, desde el parvulario hasta el bachillerato: los Ciclos Temáticos sobre Psicología Educativa en el Entorno Escolar.
+						Los ciclos temáticos se componen de <b>varias intervenciones o clases</b> a lo largo del tiempo, <b>con una continuidad lógica y acumulativa de los contenidos.</b> Equivalen a varias conferencias o clases, con posiblemente diferentes conferenciantes de PsicoNueve, en las que el volumen del contenido de la materia o la profundidad y detalle de la información que se quiere transmitir requiere más tiempo que el de una conferencia única. Como más completo, dirigido a padres y personal docente incluimos el <b>Ciclo Temático sobre la psicología y el comportamiento esperado en las diferentes etapas del desarrollo,</b> desde bebé a adolescente. También destacan los dirigidos a personal docente, desde el parvulario hasta el bachillerato: los <b>Ciclos Temáticos sobre Psicología Educativa en el Entorno Escolar.</b>
 					</p>
 				</div>
 			</div>
@@ -38,7 +38,7 @@ subtitle: La respuesta grupal
 				<div class="content">
 					<h2 class="title">Talleres prácticos</h2>
 					<p>
-						Los talleres prácticos se realizan en uno o varios días y son a la vez preventivos y educativos. Se focalizan en una temática específica dirigida a un público también muy específico. Se desarrollan con una metodología muy participativa en todas las sesiones y diversas prácticas, exigiendo el trabajo activo por parte de los asistentes, tanto en el transcurso de cada sesión como entre sesiones:
+						Los talleres prácticos se realizan en uno o varios días y son a la vez <b>preventivos y educativos.</b> Se focalizan en una temática específica dirigida a un público también muy específico. Se desarrollan con una <b>metodología muy participativa en todas las sesiones</b> y diversas prácticas, exigiendo el <b>trabajo activo por parte de los asistentes,</b> tanto en el transcurso de cada sesión como entre sesiones:
 					</p>
 				</div>
 			</div>
@@ -52,17 +52,17 @@ subtitle: La respuesta grupal
 					<ul>
 						<li>
 							<p>
-								Prevención del Acoso Escolar desde pequeñitos, dirigido a padres y educadores de escuelas infantiles en donde incidimos en las conductas, creencias y hábitos que se construyen desde la niñez y que correlacionan con la creación a largo plazo de un acosador o de una víctima.
+								<b>Prevención del Acoso Escolar desde pequeñitos,</b> dirigido a padres y educadores de escuelas infantiles en donde incidimos en las conductas, creencias y hábitos que se construyen desde la niñez y que correlacionan con la creación a largo plazo de un acosador o de una víctima.
 							</p>
 						</li>
 						<li>
 							<p>
-								Prevención y Detección del Acoso Escolar, en dos versiones, para padres y para docentes para que ambos tengan la capacidad de prevenir y/o detectar cuando un niño está siendo víctima de acoso escolar o está siendo acosador.
+								<b>Prevención y Detección del Acoso Escolar,</b> en dos versiones, <b>para padres y para docentes</b> para que ambos tengan la capacidad de prevenir y/o detectar cuando un niño está siendo víctima de acoso escolar o está siendo acosador.
 							</p>
 						</li>
 						<li>
 							<p>
-								Prevención del Acoso Escolar, dirigido a niños y adolescentes, en que se incluye tanto el aprendizaje del uso de la inteligencia emocional como la mejora de sus habilidades sociales que le permiten evitar ser víctima y le previenen de ser acosador o testigo mudo.
+								<b>Prevención del Acoso Escolar, dirigido a niños y adolescentes,</b> en que se incluye tanto el aprendizaje del uso de la inteligencia emocional como la mejora de sus habilidades sociales que le permiten evitar ser víctima y le previenen de ser acosador o testigo mudo.
 							</p>
 						</li>
 					</ul>
@@ -76,32 +76,32 @@ subtitle: La respuesta grupal
 					<ul>
 						<li>
 							<p>
-								El Taller de Conducta Alimentaria en Bebés y Niños, dirigido a los padres, les enseña como funciona el proceso de alimentación y las pautas para que los niños coman bien desde bebés.
+								<b>El Taller de Conducta Alimentaria en Bebés y Niños,</b> dirigido a los padres, les enseña como funciona el proceso de alimentación y las pautas para que los niños coman bien desde bebés.
 							</p>
 						</li>
 						<li>
 							<p>
-								El Taller de Autoestima, dirigido a mejorar el autoconcepto y la autoestima en alumnos de E.S.O. y Bachillerato atiende a una problemática muy común en la preadolescencia y adolescencia.
+								<b>El Taller de Autoestima,</b> dirigido a mejorar el autoconcepto y la autoestima en alumnos de E.S.O. y Bachillerato atiende a una problemática muy común en la preadolescencia y adolescencia.
 							</p>
 						</li>
 						<li>
 							<p>
-								El Taller de Habilidades Sociales, en dos versiones, niños y adolescentes, atiende también a una problemática común en el entorno escolar.
+								<b>El Taller de Habilidades Sociales,</b> en dos versiones, niños y adolescentes, atiende también a una problemática común en el entorno escolar.
 							</p>
 						</li>
 						<li>
 							<p>
-								El Taller-Escuela de Padres, cubriendo toda la etapa evolutiva: “Bebé, el nuevo miembro de la familia”, “Infancia y familia”, “Cambios en la preadolescencia y adolescencia”, “La comunicación en la familia”, “Cuando mis hijos han crecido”, “Cuando mis hijos se van”. “Cuando mis hijos forman su familia” , “Qué hacer con los nietos”.
+								<b>El Taller-Escuela de Padres,</b> cubriendo toda la etapa evolutiva: “Bebé, el nuevo miembro de la familia”, “Infancia y familia”, “Cambios en la preadolescencia y adolescencia”, “La comunicación en la familia”, “Cuando mis hijos han crecido”, “Cuando mis hijos se van”. “Cuando mis hijos forman su familia” , “Qué hacer con los nietos”.
 							</p>
 						</li>
 						<li>
 							<p>
-								El Programa Básico de Prevención Escolar, que incluye una introducción sobre hábitos alimenticios, hábitos de estudios, higiene del sueño, inteligencia emocional, ansiedad, relajación y estrés de exámenes, dirigido a niños y preadolescentes.
+								<b>El Programa Básico de Prevención Escolar,</b> que incluye una introducción sobre hábitos alimenticios, hábitos de estudios, higiene del sueño, inteligencia emocional, ansiedad, relajación y estrés de exámenes, dirigido a niños y preadolescentes.
 							</p>
 						</li>
 						<li>
 							<p>
-								El Taller Vivencial Emocional, dirigido a los adolescentes, en donde a través del psicodrama se promueve y desarrolla el crecimiento emocional y personal, el aprendizaje a la acción, interacción y dramatización espontánea y estrategias de resolución de problemas emocionales a través del grupo.
+								<b>El Taller Vivencial Emocional,</b> dirigido a los adolescentes, en donde a través del psicodrama se promueve y desarrolla el crecimiento emocional y personal, el aprendizaje a la acción, interacción y dramatización espontánea y estrategias de resolución de problemas emocionales a través del grupo.
 							</p>
 						</li>
 					</ul>
