--- a/metodologia.html
+++ b/metodologia.html
@@ -8,17 +8,17 @@ subtitle: Más que un centro de psicología
 		<div class="text-wrapper">
 			<h2 class="title">Tratamientos personalizados</h2>
 			<p>
-				En el entorno de los tratamientos personalizados, cada caso individual se suele iniciar con un primer breve contacto (personal, telefónico, email...) de un miembro de nuestro equipo con alguna parte interesada (adolescente, padre, profesor, tutor, pareja, familiar...) y conocedora total o parcialmente de la demanda de atención o apoyo que nuestro equipo puede ayudar a resolver o mejorar. A partir de dicho contacto, y con la breve información disponible, se acuerda la primera cita previa del interesado (o interesados) con el Psicólogo Coordinador de PsicoNueve, acompañado de un segundo psicólogo, psicoterapeuta y/o educativo que se considere más adecuado, según la breve información disponible. En dicha cita (gratuita) se confirma y profundiza en la problemática y demanda planteada y se decide:
+				En el entorno de los tratamientos personalizados, cada caso individual <b>se suele iniciar con un primer breve contacto</b> (personal, telefónico, email...) de un miembro de nuestro equipo con alguna parte interesada (adolescente, padre, profesor, tutor, pareja, familiar...) y conocedora total o parcialmente de la demanda de atención o apoyo que nuestro equipo puede ayudar a resolver o mejorar. A partir de dicho contacto, y con la breve información disponible, <b>se acuerda la primera cita previa del interesado (o interesados) con el Psicólogo Coordinador de PsicoNueve,</b> acompañado de un segundo psicólogo, psicoterapeuta y/o educativo que se considere más adecuado, según la breve información disponible. En dicha cita (gratuita) se confirma y profundiza en la problemática y demanda planteada <b>y se decide:</b>
 			</p>
 			<ul>
 				<li>
 					<p>
-						- O bien que PsicoNueve puede, en principio, atender al caso por lo que proponemos el inicio del proceso psicoterapéutico y/o educativo del mismo, designando al equipo dual de profesionales que consideramos óptimo dada la problemática inherente al caso y concretando con los interesados los aspectos terapéuticos, educativos, logísticos y económicos (diagnósticos, evaluaciones, sesiones, fechas, horarios, costes...).
+						<b>- O bien que PsicoNueve puede, en principio, atender al caso</b> por lo que proponemos el inicio del proceso psicoterapéutico y/o educativo del mismo, <b>designando al equipo dual</b> de profesionales <b>que consideramos óptimo dada la problemática</b> inherente al caso y concretando con los interesados los aspectos terapéuticos, educativos, logísticos y económicos (diagnósticos, evaluaciones, sesiones, fechas, horarios, costes...).
 					</p>
 				</li>
 				<li>
 					<p>
-						- O bien que nuestro equipo no es lo más adecuado para el tratamiento que se considera necesario para el caso, dada la problemática inherente al mismo, aconsejándole y/o derivándole a otro tipo de especialistas.
+						<b>- O bien que nuestro equipo no es lo más adecuado</b> para el tratamiento que se considera necesario para el caso, dada la problemática inherente al mismo, <b>aconsejándole y/o derivándole a otro tipo de especialistas.</b>
 					</p>
 				</li>
 			</ul>
@@ -28,27 +28,27 @@ subtitle: Más que un centro de psicología
 		<div class="text-wrapper">
 			<h2 class="title">Entorno grupal</h2>
 			<p>
-				En el entorno grupal y en sus diferentes facetas: preventiva, curativa, mejorativa, educativa o informativa, evitamos el uso de clases magistrales realizadas por un único experto, buscando otros modelos más atrayentes. En nuestros cursos, conferencias, talleres, evaluaciones grupales o grupos terapéuticos y/o educativos potenciamos la interacción activa de los participantes con varias estrategias, basadas en modelos más efectivos y sugerentes, incluyendo además nuestra filosofía psicocooperativa que empleamos siempre en los entornos personalizados e individuales. Estos modelos, que tienen la virtud de mantener la atención de los asistentes en un nivel motivacional alto, se resumen en los siguientes ejemplos:
+				En el entorno grupal y en sus diferentes facetas: preventiva, curativa, mejorativa, educativa o informativa, <b>evitamos el uso de clases magistrales realizadas por un único experto,</b> buscando otros modelos más atrayentes. En nuestros cursos, conferencias, talleres, evaluaciones grupales o grupos terapéuticos y/o educativos <b>potenciamos la interacción activa de los participantes</b> con varias estrategias, basadas en modelos más efectivos y sugerentes, incluyendo además nuestra <b>filosofía psicocooperativa</b> que empleamos siempre en los entornos personalizados e individuales. Estos modelos, que tienen la virtud de mantener la atención de los asistentes en un nivel motivacional alto, se resumen en los siguientes ejemplos:
 			</p>
 			<ul>
 				<li>
 					<p>
-						Dos o tres ponentes de PsicoNueve, desarrollan la materia en interacción continua, complementándose entre ellos, clarificando uno lo que otro acaba de decir, incluyendo ejemplos o excezpciones, e incluso comentando diferentes perspectivas o criterios divergentes entre ellos. Se permiten interrupciones y preguntas de los asistentes. Incluso alguno de los ponentes de PsicoNueve puede interaccionar físicamente con los asistentes mezclándose entre ellos.
+						Dos o tres ponentes de PsicoNueve, desarrollan la materia en <b>interacción continua,</b> complementándose entre ellos, clarificando uno lo que otro acaba de decir, incluyendo ejemplos o excezpciones, e incluso comentando diferentes perspectivas o criterios divergentes entre ellos. <b>Se permiten interrupciones y preguntas de los asistentes. Incluso alguno de los ponentes de PsicoNueve puede interaccionar físicamente</b> con los asistentes mezclándose entre ellos.
 					</p>
 				</li>
 				<li>
 					<p>
-						Un coordinador, dos o tres ponentes de PsicoNueve y dos o tres ponentes externos invitados, convertidos todos ellos en una mesa de debate sobre el tema a desarrollar, con libertad de discurso entre ellos, con el control del coordinador de la mesa, que puede dar entrada también a otros asistentes, fuera de la mesa.
+						Un coordinador, dos o tres ponentes de PsicoNueve y dos o tres ponentes externos invitados, convertidos todos ellos en una <b>mesa de debate</b> sobre el tema a desarrollar, <b>con libertad de discurso entre ellos,</b> con el control del coordinador de la mesa, que puede dar entrada también a otros asistentes, fuera de la mesa.
 					</p>
 				</li>
 				<li>
 					<p>
-						Un escenario, ya preparado, en el que varios miembros de PsicoNueve y opcionalmente algún voluntario de los asistentes, hacen una demostración dramatizando un hecho real o posible, sobre la materia objeto de la ponencia, clarificando los comportamientos esperados de los personajes interpretados (psicólogos, adolescentes, familias, profesores, padres, parejas, niños, amigos...). Los asistentes pueden interaccionar con los personajes, contestando estos según su rol en la escena.
+						Un escenario, ya preparado, en el que varios miembros de PsicoNueve y opcionalmente algún voluntario de los asistentes, hacen una <b>demostración dramatizando un hecho real o posible, sobre la materia objeto de la ponencia,</b> clarificando los comportamientos esperados de los personajes interpretados (psicólogos, adolescentes, familias, profesores, padres, parejas, niños, amigos...). Los asistentes pueden interaccionar con los personajes, contestando estos según su rol en la escena.
 					</p>
 				</li>
 				<li>
 					<p>
-						Ponentes de PsicoNueve, expertos cada uno en diferentes técnicas, corrientes o enfoques terapéuticos o educativos y sin ningún guión previo, a la espera de las preguntas, los ejemplos o los casos concretos relacionados con la materia objeto del taller que cualquier asistente desee explicitar. Cada ponente argumenta sus opiniones y experiencias sobre lo propuesto por los asistentes, con posibles matizaciones o divergencias entre ellos, generando un amplio debate entre ellos mismos y los asistentes que deseen intervenir.
+						Ponentes de PsicoNueve, <b>expertos</b> cada uno en diferentes técnicas, corrientes o enfoques terapéuticos o educativos y sin ningún guión previo, <b>a la espera de las preguntas, los ejemplos o los casos concretos relacionados con la materia objeto del taller</b> que cualquier asistente desee explicitar. Cada ponente argumenta sus opiniones y experiencias sobre lo propuesto por los asistentes, con posibles matizaciones o divergencias entre ellos, generando un amplio debate entre ellos mismos y los asistentes que deseen intervenir.
 					</p>
 				</li>
 			</ul>
@@ -56,10 +56,10 @@ subtitle: Más que un centro de psicología
 	</section>
 	<section class="info">
 		<p>
-			Normalmente, las sesiones terapéuticas y/o educativas tienen una frecuencia semanal y una duración efectiva de 60 minutos, aunque en algunos casos puede aumentar o disminuir dicha frecuencia y/o alargarse el tiempo de la sesión, según las necesidades del proceso. En cada una de las sesiones trabajan los dos psicólogos, terapeutas y/o educadores con la familia, los padres, el adolescente, el menor o la pareja, además de que periódicamente todos los casos son comentados y supervisados colectivamente por nuestro equipo supervisor, en un sistema que se corresponde con nuestra filosofía psicocooperativa, el modelo Dos/Nueve (dos co-psicologos y nue-Nueve (dos co-psicologos y nueve co-supervisores).
+			Normalmente, <b>las sesiones terapéuticas y/o educativas</b> tienen una frecuencia semanal y una duración efectiva de 60 minutos, aunque en algunos casos puede aumentar o disminuir dicha frecuencia y/o alargarse el tiempo de la sesión, según las necesidades del proceso. En cada una de las sesiones <b>trabajan los dos psicólogos, terapeutas y/o educadores</b> con la familia, los padres, el adolescente, el menor o la pareja, además de que periódicamente todos los casos son <b>comentados y supervisados colectivamente por nuestro equipo supervisor,</b> en un sistema que se corresponde con nuestra filosofía psicocooperativa, <b>el modelo Dos/Nueve (dos co-psicologos y nue-Nueve (dos co-psicologos y nueve co-supervisores).</b>
 		</p>
 		<p>
-			En algunos casos es necesario complementar las terapias anteriores con diferentes actividades grupales, tales como talleres terapéuticos o psicoeducativos  dirigidos a niños, adolescentes, parejas o padres. Igualmente, en muchos casos, sobre todo cuando se trata de menores, consideramos necesario y conveniente involucrar no sólo a la familia, sino al entorno escolar y relacional del niño o adolescente, por lo que procuramos mantener un contacto, si es posible, con dicho entorno (profesores, tutores, amigos...) trasladándonos cuando es posible al entorno físico en que los problemas o conflictos tienen su aparición. En ocasiones, el trabajo psicológico y educativo, de manera aislada, no es suficiente y es necesario trabajar con otros profesionales: psiquiatras, médicos, pediatras o personal docente. En estos casos mantenemos un permanente contacto fluido con dichos profesionales, para lograr entre todos los mejores resultados finales.
+			<b>En algunos casos es necesario complementar las terapias anteriores con diferentes actividades grupales,</b> tales como talleres terapéuticos o psicoeducativos  dirigidos a niños, adolescentes, parejas o padres. Igualmente, en muchos casos, sobre todo cuando se trata de menores, consideramos necesario y conveniente <b>involucrar no sólo a la familia, sino al entorno escolar y relacional del niño o adolescente,</b> por lo que procuramos mantener un contacto, si es posible, con dicho entorno (profesores, tutores, amigos...) trasladándonos cuando es posible al entorno físico en que los problemas o conflictos tienen su aparición. En ocasiones, el trabajo psicológico y educativo, de manera aislada, no es suficiente y es necesario <b>trabajar con otros profesionales:</b> psiquiatras, médicos, pediatras o personal docente. En estos casos mantenemos un permanente contacto fluido con dichos profesionales, para lograr entre todos los mejores resultados finales.
 		</p>
 	</section>
 </section>
