--- a/nuestra_filosofia.html
+++ b/nuestra_filosofia.html
@@ -9,7 +9,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Personalización</h1>
 				<p>
-					Entendemos que cada caso que se nos plantea por parte de personas, parejas o familias es único; cada problema es diferente, no se  adapta a generalizaciones. En realidad no existe el problema como tal, existen las personas concretas con su problemática o conflictos específicos. No existe una terapia psicológica y educativa ideal para cada problema concreto, en cada caso existe el tratamiento más adecuado para cada persona, sus circunstancias, sus necesidades y sus requerimientos. Por ello, en PsicoNueve evitamos en lo posible las etiquetas o clasificaciones generalistas y tratamos siempre la problemática planteada por los usuarios de nuestros servicios de manera totalmente “a la medida”, personalizada e individualizada.
+					Entendemos que cada caso que se nos plantea por parte de personas, parejas o familias es único; <b>cada problema es diferente</b>, no se  adapta a generalizaciones. En realidad no existe el problema como tal, existen las personas concretas con su problemática o conflictos específicos. No existe una terapia psicológica y educativa ideal para cada problema concreto, <b>en cada caso existe el tratamiento más adecuado para cada persona, sus circunstancias, sus necesidades y sus requerimientos.</b> Por ello, en PsicoNueve evitamos en lo posible las etiquetas o clasificaciones generalistas y tratamos siempre la problemática planteada por los usuarios de nuestros servicios de manera totalmente “a la medida”, personalizada e individualizada.
 				</p>
 			</div>
 		</div>
@@ -19,7 +19,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Dos coterapeutas por caso</h1>
 				<p>
-					En PsicoNueve, el tratamiento de cada caso concreto es realizado siempre por un equipo formado por dos psicólogos, psicoterapeutas y/o psico-educadores que trabajan con los pacientes de manera conjunta y coordinada, proporcionando un valor superior a la suma de experiencias y de conocimientos. En todas las sesiones con los pacientes, están presentes los dos coterapeutas.
+					En PsicoNueve, el tratamiento de cada <b>caso concreto</b> es realizado siempre por un equipo formado por <b>dos psicólogos, psicoterapeutas y/o psico-educadores</b> que trabajan con los pacientes de manera conjunta y coordinada, proporcionando un <b>valor superior a la suma de experiencias y de conocimientos.</b> En todas las sesiones con los pacientes, están presentes los dos coterapeutas.
 				</p>
 			</div>
 		</div>
@@ -29,7 +29,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Psicocooperación grupal</h1>
 				<p>
-					Adicionalmente, todos los casos clínicos y/o educativos son conocidos y supervisados por todo el equipo psicoterapéutico y psicoeducativo que formamos PsicoNueve, mediante sesiones periódicas de supervisión en grupo de todo el equipo completo. Esto permite a los dos coterapeutas responsables de cada tratamiento, mejorar y adecuar aún más la terapia empleada en cada caso concreto, gracias a la experiencia grupal.
+					Adicionalmente, todos los <b>casos clínicos y/o educativos</b> son conocidos y supervisados por todo el equipo psicoterapéutico y psicoeducativo que formamos PsicoNueve, <b>mediante sesiones periódicas de supervisión en grupo de todo el equipo completo.</b> Esto permite a los dos coterapeutas responsables de cada tratamiento, mejorar y adecuar aún más la terapia empleada en cada caso concreto, gracias a la experiencia grupal.
 				</p>
 			</div>
 		</div>
@@ -39,7 +39,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Psicoterapia integradora</h1>
 				<p>
-					PsicoNueve se enmarca dentro de una perspectiva integradora de las diferentes técnicas, corrientes o  enfoques psicoterapéuticos y psicoeducativos existentes. En cada caso clínico y/o educativo se emplea la técnica o técnicas que se consideran más adecuadas para las personas involucradas, siempre según los requerimientos del caso concreto que se esté tratando. Nuestros profesionales defienden un modelo ecléctico, estableciéndose como un equipo heterogéneo en formación y experiencia dentro de las diferentes terapias psicológicas más actualizadas.
+					PsicoNueve se enmarca dentro de una <b>perspectiva integradora de las diferentes técnicas,</b> corrientes o  enfoques psicoterapéuticos y psicoeducativos existentes. En cada caso clínico y/o educativo se emplea la técnica o técnicas <b>que se consideran más adecuadas para las personas involucradas,</b> siempre según los requerimientos del caso concreto que se esté tratando. Nuestros profesionales defienden un modelo ecléctico, estableciéndose como un equipo heterogéneo en formación y experiencia dentro de las diferentes terapias psicológicas más actualizadas.
 				</p>
 			</div>
 		</div>
@@ -49,7 +49,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Relevancia y trascendencia</h1>
 				<p>
-					Creemos firmemente que los problemas o conflictos que nos plantean los usuarios de nuestros servicios, y que intentamos resolver con ellos, son transcendentales, tal vez de la mayor importancia para ellos como personas en permanente desarrollo, para su felicidad, para su vida actual y futura, y para la vida de las personas que les rodean. Es por todo ello que consideramos nuestra obligación ofrecerles el mejor servicio profesional posible y a un coste razonable. Por eso en PsicoNueve nuestro esfuerzo como equipo está dirigido permanentemente en ambos sentidos.
+					Creemos firmemente que <b>los problemas o conflictos que nos plantean</b> los usuarios de nuestros servicios, y que intentamos resolver con ellos, <b>son transcendentales,</b> tal vez de la mayor importancia para ellos como personas en permanente desarrollo, para su felicidad, para su vida actual y futura, y para la vida de las personas que les rodean. Es por todo ello que consideramos nuestra obligación ofrecerles <b>el mejor servicio profesional posible y a un coste razonable.</b> Por eso en PsicoNueve nuestro esfuerzo como equipo está dirigido permanentemente en ambos sentidos.
 				</p>
 			</div>
 		</div>
@@ -59,7 +59,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Importancia de la prevención</h1>
 				<p>
-					Creemos en la posibilidad de la prevención psicológica, la gran olvidada de la ciencia psicológica. En PsicoNueve, como prevención primaria (o evitación del daño) y secundaria (o detección temprana en estadios precoces) hemos desarrollado diversos servicios preventivos para los entornos familiar y escolar, en los cuales se desarrolla y construye en gran medida la personalidad: cursos, talleres, conferencias, evaluaciones adaptativas y psicopedagógicas, aplicaciones de test, apoyo didáctico y escolar, etc. La prevención terciaria (o evitación del empeoramiento) la incluimos siempre dentro de los objetivos de cada terapia.
+					<b>Creemos en la posibilidad de la prevención psicológica,</b> la gran olvidada de la ciencia psicológica. En PsicoNueve, como prevención primaria (o evitación del daño) y secundaria (o detección temprana en estadios precoces) hemos desarrollado diversos <b>servicios preventivos para los entornos familiar y escolar,</b> en los cuales se desarrolla y construye en gran medida la personalidad: cursos, talleres, conferencias, evaluaciones adaptativas y psicopedagógicas, aplicaciones de test, apoyo didáctico y escolar, etc. La prevención terciaria (o evitación del empeoramiento) la incluimos siempre dentro de los objetivos de cada terapia.
 				</p>
 			</div>
 		</div>
@@ -69,7 +69,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Sistema multidisciplinar</h1>
 				<p>
-					En PsicoNueve confiamos en la terapia psicológica como herramienta fundamental para el tratamiento de la problemática y conflictos afectivos, emocionales, cognitivos, relacionales conductuales o educativos. Sin embargo, en algunos casos la terapia psicológica de manera aislada no es suficiente y es necesario disponer de un entorno multidisciplinar para conseguir mayor eficacia en el tratamiento. Por eso nuestro equipo está abierto al enriquecimiento que supone trabajar con otros profesionales: psiquiatras, médicos, pediatras, pedagogos y personal docente, cooperando todos con el objetivo común de lograr los mejores resultados finales para las personas y su entorno.
+					En PsicoNueve <b>confiamos en la terapia psicológica como herramienta fundamental</b> para el tratamiento de la problemática y conflictos afectivos, emocionales, cognitivos, relacionales conductuales o educativos. Sin embargo, en algunos casos la terapia psicológica de manera aislada no es suficiente y es necesario disponer de un <b>entorno multidisciplinar para conseguir mayor eficacia en el tratamiento.</b> Por eso nuestro equipo está abierto al enriquecimiento que supone trabajar con otros profesionales: psiquiatras, médicos, pediatras, pedagogos y personal docente, cooperando todos con el objetivo común de lograr los mejores resultados finales para las personas y su entorno.
 				</p>
 			</div>
 		</div>
@@ -79,7 +79,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Capacidad autocurativa</h1>
 				<p>
-					Creemos en la capacidad de autocuración de las personas que se ve influida por muchos factores: nuestro estado mental en primer lugar, la tendencia a ser positivos incluso en condiciones críticas, el estilo de vida y la experiencia emocional. El cerebro es capaz de crear todas las condiciones necesarias para detectar, abordar y resolver muchas de las dificultades personales en su manifestación emocional, mental y corporal. Este fenómeno puede ser activado con ayuda psicológica. Nuestra meta en PsicoNueve es potenciar, en lo posible, esta capacidad y promover así la autonomía de la persona.
+					<b>Creemos en la capacidad de autocuración de las personas</b> que se ve influida por muchos factores: nuestro estado mental en primer lugar, la tendencia a ser positivos incluso en condiciones críticas, el estilo de vida y la experiencia emocional. <b>El cerebro es capaz</b> de crear todas las condiciones necesarias para detectar, abordar y resolver muchas de las dificultades personales en su manifestación emocional, mental y corporal. Este fenómeno <b>puede ser activado con ayuda psicológica.</b> Nuestra meta en PsicoNueve es potenciar, en lo posible, esta capacidad y <b>promover así la autonomía de la persona.</b>
 				</p>
 			</div>
 		</div>
@@ -89,7 +89,7 @@ subtitle: Los nueve principios que nos determinan
 			<div class="content">
 				<h1 class="title">Autonomía, papel activo y libertad</h1>
 				<p>
-					Por encima de todo, en PsicoNueve enfatizamos el papel activo del cliente, paciente o usuario de nuestros servicios como principal agente de su propio cambio o formación. Evitamos en lo posible los tratamientos directivos, respetando la libertad que toda persona posee y priorizado su autonomía por medio del desarrollo de sus propias habilidades, convirtiéndose también en coparticipe de nuestro equipo, colaborando, en todo momento en el proceso de su evolución personal.
+					Por encima de todo, en PsicoNueve <b>enfatizamos el papel activo del cliente,</b> paciente o usuario de nuestros servicios como <b>principal agente de su propio cambio</b> o formación. Evitamos en lo posible los tratamientos directivos, respetando la libertad que toda persona posee y priorizado su autonomía por medio del <b>desarrollo de sus propias habilidades,</b> convirtiéndose también en coparticipe de nuestro equipo, colaborando, en todo momento en el proceso de su evolución personal.
 				</p>
 			</div>
 		</div>
