Arreglos ortográficos en htmls

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Inicio
 </section>
 <section id="abstract">
 	<ul>
-		<li>Un equipo disciplinar e integrador</li>
+		<li>Un equipo integrador y multidisciplinar</li>
 		<li>Profesionales con amplios conocimientos y experiencias</li>
 		<li>Expertos en entornos familiares y escolares</li>
 	</ul>
