--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -31,7 +31,7 @@ subtitle: Nuestro equipo fundador
 		<li>
 			<h2 class="title">Gema López Martínez</h2>
 			<p>
-				<span>Colegiada M-25850.</span> Licenciada en Psicología por la Universidad de Murcia. Máster en  psicología de la Salud y Práctica Clínica por la Universidad Pontificia de Comillas, Madrid. Experta en Psicoterapia de Parejas por el Colegio Oficial de Psicólogos de Madrid y Especialista en Psicoterapia de Niños y Adolescentes por la Escuela de Psicoterapia y Psicodrama de Madrid. Especialista en Mediación Familiar por la Universidadde Castilla La Mancha. Experiencia principalmente en <b>terapia de parejas, niños, adolescentes y familias, en la inserción familiar y sociolaboral del enfermo mental crónico y en la impartición de cursos y programas formativos.</b> Orientación integradora sistémica, psicodinámica, cognitiva-conductual y humanista.
+				<span>Colegiada M-25850.</span> Licenciada en Psicología por la Universidad de Murcia. Máster en  psicología de la Salud y Práctica Clínica por la Universidad Pontificia de Comillas, Madrid. Experta en Psicoterapia de Parejas por el Colegio Oficial de Psicólogos de Madrid y Especialista en Psicoterapia de Niños y Adolescentes por la Escuela de Psicoterapia y Psicodrama de Madrid. Especialista en Mediación Familiar por la Universidad de Castilla La Mancha. Experiencia principalmente en <b>terapia de parejas, niños, adolescentes y familias, en la inserción familiar y sociolaboral del enfermo mental crónico y en la impartición de cursos y programas formativos.</b> Orientación integradora sistémica, psicodinámica, cognitiva-conductual y humanista.
 			</p>
 		</li>
 		<li>
@@ -49,7 +49,7 @@ subtitle: Nuestro equipo fundador
 		<li>
 			<h2 class="title">María Rodríguez Manzarbeitia</h2>
 			<p>
-				<span>Colegiada M-31192.</span> Título Universitario de Grado de Psicología por la Universidad Pontificia de Comillas, Madrid. Máster en Psicología General Sanitaria y Máster en Terapia Cognitivo-Conductual con Niños y Adolescentes, ambos por la misma universidad. Máster en Psicomotricidad por Psicopraxis.  Experiencia principalmente en <b>terapia individual con niños y adolescentescentes y en psicomotricidad, trabajo psicomotriz con el niño,</b>  muy importante para potenciar su neurodesarrollo. Orientación cognitivo-conductual de última generación, humanista, psicodinámica y sistémica.
+				<span>Colegiada M-31192.</span> Título Universitario de Grado de Psicología por la Universidad Pontificia de Comillas, Madrid. Máster en Psicología General Sanitaria y Máster en Terapia Cognitivo-Conductual con Niños y Adolescentes, ambos por la misma universidad. Máster en Psicomotricidad por Psicopraxis. Experiencia principalmente en <b>terapia individual con niños y adolescentes y en psicomotricidad, trabajo psicomotriz con el niño,</b> muy importante para potenciar su neurodesarrollo. Orientación cognitivo-conductual de última generación, humanista, psicodinámica y sistémica.
 			</p>
 		</li>
 		<li>
