--- a/servicios.html
+++ b/servicios.html
@@ -43,10 +43,10 @@ subtitle: Una amplia gama de servicios para tus necesidades
 <section id="lista-servicios">
 	<section class="intro">
 		<p>
-			<b>LAS EVALUACIONES DIAGNÓSTICAS Y/O EDUCATIVAS</b> permiten <b>comprender</b> con la profundidad suficiente el problema, conflicto, requerimiento o <b>necesidades del usuario de nuestros servicios.</b> En el caso de adultos se utilizan diferentes técnicas, como entrevistas libres, estructuradas o semiestructuradas,diferentes técnicas, como entrevistas libres, estructuradas o semiestructuradas, aplicaciones de test específicos, etc.
+			<b>LAS EVALUACIONES DIAGNÓSTICAS Y/O EDUCATIVAS</b> permiten <b>comprender</b> con la profundidad suficiente el problema, conflicto, requerimiento o <b>necesidades del usuario de nuestros servicios.</b> En el caso de adultos se utilizan diferentes técnicas, como entrevistas libres, estructuradas o semiestructuradas, aplicaciones de test específicos, etc.
 		</p>
 		<p>
-			En el caso de niños o adolescentes, la evaluación comprende un profundo análisis de la información aportada por los padres, así como la valoración individual del sujeto, usando técnicas delos padres, así como la valoración individual del sujeto, usando técnicas de evaluación que tienen en cuenta y superan las limitaciones que, por la cortaevaluación que tienen en cuenta y superan las limitaciones que, por la corta edad o la resistencia a aceptar ayuda, tienen algunos niños y adolescentes.
+			En el caso de niños o adolescentes, la evaluación comprende un profundo análisis de la información aportada por los padres, así como la valoración individual del sujeto, usando técnicas de evaluación que tienen en cuenta y superan las limitaciones que, por la corta edad o la resistencia a aceptar ayuda, tienen algunos niños y adolescentes.
 		</p>
 	</section>
 	<ul class="zigzag iconbkg">
