Arreglos en imagen grupal y añadida individuales

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -11,54 +11,63 @@ subtitle: Nuestro equipo fundador
 <section id="equipo-fundador">
 	<ul>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">Andrea Martínez Fernández</h2>
 			<p>
 				<span>Colegiada M- 28412.</span> Licenciada en Psicología por la Universidad de Deusto. Máster en Psicología Clínica y de la Salud por la Universidad Complutense de Madrid. Experiencia principalmente en <b>terapia individual con niños y adolescentes</b> (problemas de conducta, manejo de ansiedad, gestión de emociones, dificultades de relación, ...), talleres de <b>habilidades sociales y resolución de conflictos entre niños y atención a mujeres en servicios sociales.</b> Orientación cognitivo-conductual de última generación.
 			</p>
 		</li>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">Cristina García Navarro</h2>
 			<p>
 				<span>Colegiada M-24856.</span> Licenciada en Psicología por la Universidad Jaime I de Castellón. Máster en Psicopatología, Salud y Neuropsicología por la misma Universidad. Experta en Psicoterapia de Niños y Adolescentes por el Colegio Oficial de Psicólogos de Madrid y la AEFDP. Dentro del Hospital Universitario Doce de Octubre, participante en numerosos proyectos de investigación, principalmente en neuropsicología clínica en pacientes pediátricos, con varias publicaciones, ponencias y comunicaciones en diferentes congresos internacionales. Experiencia principalmente en la <b>evaluación, el tratamiento, desarrollo y atención de pacientes pediátricos.</b> Orientación más cercana al entorno psiquiátrico, médico y neurológico.
 			</p>
 		</li>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">Froilán Rincón de Matos</h2>
 			<p>
 				<span>Colegiado M-27107.</span> Licenciado en Psicología por la Universidad Nacional de Educación a Distancia (UNED). Experto en Psicoterapia de Niños y Adolescentes por el Colegio Oficial de Psicólogos de Madrid y la AEFDP. Formación en Ingeniería Aeronáutica, Informática, Empresariales y RRHH. Experiencia principal en gestión, selección y políticas  de personal, <b>entorno laboral, entorno escolar, niños, adolescentes y conciliación de la vida familiar y profesional.</b> Orientación cognitiva-constructivista, sistémica, humanista y psicodramática.
 			</p>
 		</li>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">Gema López Martínez</h2>
 			<p>
 				<span>Colegiada M-25850.</span> Licenciada en Psicología por la Universidad de Murcia. Máster en  psicología de la Salud y Práctica Clínica por la Universidad Pontificia de Comillas, Madrid. Experta en Psicoterapia de Parejas por el Colegio Oficial de Psicólogos de Madrid y Especialista en Psicoterapia de Niños y Adolescentes por la Escuela de Psicoterapia y Psicodrama de Madrid. Especialista en Mediación Familiar por la Universidad de Castilla La Mancha. Experiencia principalmente en <b>terapia de parejas, niños, adolescentes y familias, en la inserción familiar y sociolaboral del enfermo mental crónico y en la impartición de cursos y programas formativos.</b> Orientación integradora sistémica, psicodinámica, cognitiva-conductual y humanista.
 			</p>
 		</li>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">Isabel Aboy Ferrer</h2>
 			<p>
 				<span>Colegiada M-19931.</span> Licenciada en Psicología por la Universidad Complutense de Madrid. En la misma universidad, Curso de Investigación (cognición, emoción y estrés), y Diplomada en Terapia de Pareja, Sexología y Sistema Familiar. Máster en Dirección y Gestión de RRHH. <b>Experiencia principal en Acoso Escolar, riesgos de las Nuevas Tecnologías en menores y Trastornos de la Conducta Alimentaria.</b> Durante siete años, psicóloga clínica del primer centro de Seguridad en Internet para la Protección de la Infancia en España, auspiciado por el Ministerio de Industria y dependiente del Safer Internet Programme de la Comisión Europea. Orientación cognitivo-conductual y sistémica.
 			</p>
 		</li>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">Josefina González Calvo</h2>
 			<p>
 				<span>Colegiada M-27222.</span> Licenciada en Psicología por la Universidad Nacional de Educación a Distancia (UNED). Formación completa en Construcción de la Biografía Humana de Laura Gutman de Buenos Aires y formación en <b>Psicología del embarazo, puerperio e infancia temprana y Psicología de la Salud.</b> Trabaja en el ámbito de la familia, pareja, embarazo y primeros años de vida de los niños, tanto a nivel individual como grupal. Creadora de la web www.mihijocomebien.es sobre hábitos de alimentación desde los seis meses de vida.
 			</p>
 		</li>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">María Rodríguez Manzarbeitia</h2>
 			<p>
 				<span>Colegiada M-31192.</span> Título Universitario de Grado de Psicología por la Universidad Pontificia de Comillas, Madrid. Máster en Psicología General Sanitaria y Máster en Terapia Cognitivo-Conductual con Niños y Adolescentes, ambos por la misma universidad. Máster en Psicomotricidad por Psicopraxis. Experiencia principalmente en <b>terapia individual con niños y adolescentes y en psicomotricidad, trabajo psicomotriz con el niño,</b> muy importante para potenciar su neurodesarrollo. Orientación cognitivo-conductual de última generación, humanista, psicodinámica y sistémica.
 			</p>
 		</li>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">María Cecilia Machicado Villamizar</h2>
 			<p>
 				<span>Colegiada  M-27203.</span> Licenciada en Psicología por la Pontificia Universidad Javeriana de Bogotá Colombia. Máster en Psicoterapia Psicoanalítica por la Universidad Complutense de Madrid. Formación específica en el Institute for Neuro-Physiological Psychology en Chester, UK. y también formada en la Construcción de la Biografiá Humana de Laura Gutman de Buenos Aires. Experiencia principalmente en el abordaje de mujeres, embarazadas, madres y padres, <b>enfatizando en los procesos psicológicos involucrados en la maternidad y la crianza.</b> También en el <b>tabajo psicomotriz con el niño,</b> y en <b>metodologías de reorganización neuronal,</b> punteras en el abordaje de las diferentes dificultades del aprendizaje, emocionales y sociales del niño y adolescente. Orientación psicoanalítica, apoyada por otros enfoques.
 			</p>
 		</li>
 		<li>
+			<div class="individual"></div>
 			<h2 class="title">Patricia Ballestrino Fumera</h2>
 			<p>
 				<span>Colegiada M-26095.</span> Licenciada en Psicología por la Universidad Nacional de Educación a Distancia (UNED). Colaborador investigador en el proyecto Funcionamiento Ejecutivo, Desarrollo Cognitivo y Aprendizaje Escolar de la UNED. Especialista en Psicoterapia y Psicodrama por la Escuela de Psicoterapia y Psicodrama de Madrid. Experta en Psicoterapia de Niños y Adolescentes por el Colegio Oficial de Psicólogos de Madrid y la AEFDP. Especialista en Psicoterapia Psicoanalista Lacaniana por la Escuela de Psicoanalistas de Madrid. Experiencia principalmente en <b>terapia individual infanto-juvenil y adultos.</b> Orientación psicodinámica, psicoanálisis y psicodrama.
