Tooltip para telefono

--- a/contacto.html
+++ b/contacto.html
@@ -12,9 +12,18 @@ subtitle: A tu disposición cuando lo necesites
 </section>
 <section id="formularios">
 	<form class="contacto">
-		<p>
-			Si desea contactar <b>personalmente</b> con nosotros puede llamarnos a nuestro teléfono (24hs/7d) o bien rellenar el siguiente formulario:
-		</p>
+		<div class="tooltip-wrapper">
+			<p>
+				Si desea contactar <b>personalmente</b> con nosotros puede llamarnos a nuestro
+			</p>
+			<div class="tooltip">
+				teléfono (24hs/7d)
+				<span class="tooltiptext">695&nbsp;642&nbsp;851</span>
+			</div>
+			<p>
+				o bien rellenar el siguiente formulario:
+			</p>
+		</div>
 		<div class="form-group">
 			<label>Nombre</label>
 			<input type="text" name="nombre" required autofocus/>
