unless exclude para detectar root

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 nav: 1
 title: Inicio
+exclude: true
 ---
 <section id="index-cover" class="jarallax">
 	<h1 class="title">Atención psicológica a la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
