--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Inicio
 exclude: true
 ---
 <section id="index-cover" class="jarallax">
-	<h1 class="title">Atención psicológica a la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
+	<h1 class="title">Atención psicológica a <br />la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
 	<h2 class="subtitle">Un nuevo enfoque psicoterapéutico y educativo!</h2>
 </section>
 <section id="abstract">
@@ -24,7 +24,7 @@ exclude: true
 	<div class="content">
 		<div class="img"></div>
 		<div class="wrapper">
-			<h3 class="subtitle">Juntos es mejor!</h3>
+			<h3 class="subtitle">Juntos es mejor</h3>
 			<p>
 				Entendemos la importancia de un <b>tratamiento eficaz</b>, por eso hemos unido nuestras experiencias, conocimientos y capacidades  (amplias, diversas y heterogéneas), para lograr el mejor tratamiento posible mediante la <b>implicación del equipo completo en cada caso concreto</b>.
 			</p>
