--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@ title: Inicio
 exclude: true
 ---
 <section id="index-cover" class="jarallax">
-	<h1 class="title">Atención psicológica a <br />la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
-	<h2 class="subtitle">Un nuevo enfoque psicoterapéutico y educativo!</h2>
+	<div class="text-wrapper">
+		<h1 class="title">Atención psicológica a la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
+		<h2 class="subtitle">Un nuevo enfoque psicoterapéutico y educativo!</h2>
+	</div>
 </section>
 <section id="abstract">
 	<ul>
