--- a/areas_intervencion.html
+++ b/areas_intervencion.html
@@ -25,7 +25,7 @@ subtitle: La familia, un todo dinámico
 			</div>
 		</div>
 	</section>
-	<section class="card">
+	<section class="card right-img">
 		<div class="text-wrapper">
 			<div class="content">
 				<h2 class="title">La etapa crítica<br />que hay que pasar</h2>
@@ -51,7 +51,7 @@ subtitle: La familia, un todo dinámico
 			</div>
 		</div>
 	</section>
-	<section class="card">
+	<section class="card right-img">
 		<div class="text-wrapper">
 			<div class="content">
 				<h2 class="title">La familia,<br />como fin del ciclo vital</h2>
