--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ exclude: true
 	</ul>
 </section>
 <section id="index-content">
-	<div class="content rp-padding">
+	<div class="content short-padding">
 		<h2 class="title underlined">UN EQUIPO CREADO PARA TI</h2>
 		<p>
 			Somos un equipo de psicólogos, psicoterapeutas, psicólogos educativos y de recursos humanos y otros profesionales afines. Nuestro objetivo es la <b>atención y tratamiento</b> psicológico a la <b>infancia, adolescencia, pareja y familia</b> ante cualquier tipo de demandas o cuestiones de índole psicológica y/o educativa que se producen en el entorno familiar o escolar.
@@ -25,7 +25,7 @@ exclude: true
 	</div>
 	<div class="content">
 		<div class="img"></div>
-		<div class="wrapper rp-padding">
+		<div class="wrapper short-padding">
 			<h3 class="subtitle">Juntos es mejor</h3>
 			<p>
 				Entendemos la importancia de un <b>tratamiento eficaz</b>, por eso hemos unido nuestras experiencias, conocimientos y capacidades  (amplias, diversas y heterogéneas), para lograr el mejor tratamiento posible mediante la <b>implicación del equipo completo en cada caso concreto</b>.
@@ -33,14 +33,14 @@ exclude: true
 		</div>
 	</div>
 	<div class="content jarallax">
-		<div class="wrapper rp-padding">
+		<div class="wrapper short-padding">
 			<h2 class="title">COOPERAMOS PARA MEJORAR</h2>
 			<p>
 				PsicoNueve se formó en el año 2015 por un equipo inicial de nueve profesionales, todos psicólogos en ejercicio profesional, <b>interesados en el mundo infantil y familiar</b>, preocupados por el incremento de conflictos y problemas psicológicos y educativos que se dan alrededor de la familia, los padres, la pareja, los adolescentes, los niños, el embarazo, la fertilidad y la crianza. Por nuestra amplia experiencia profesional y vital, hemos sido espectadores privilegiados de los mismos, <b>sumando</b> en este proyecto <b>nuestras experiencias</b>, conocimientos y formas diferentes de enfocar las soluciones para ofrecer una <b>ayuda efectiva y completa</b>.
 			</p>
 		</div>
 	</div>
-	<div class="content rp-padding">
+	<div class="content short-padding">
 		<h2 class="title underlined">PROCESOS PSICOCOOPERATIVOS</h2>
 		<div class="wrapper">
 			<p>
