MQ para nav06 y nav07

--- a/cursos_talleres.html
+++ b/cursos_talleres.html
@@ -45,7 +45,7 @@ subtitle: La respuesta grupal
 		</li>
 	</ul>
 	<section id="talleres">
-		<section class="card">
+		<section class="card right-img">
 			<div class="text-wrapper">
 				<div class="content">
 					<h3 class="subtitle">Talleres sobre<br />prevención del acoso escolar</h3>
@@ -69,7 +69,7 @@ subtitle: La respuesta grupal
 				</div>
 			</div>
 		</section>
-		<section class="card">
+		<section class="card right-img">
 			<div class="text-wrapper">
 				<div class="content">
 					<h3 class="subtitle">Otros talleres</h3>
