--- a/servicios.html
+++ b/servicios.html
@@ -9,7 +9,7 @@ subtitle: Una amplia gama de servicios para tus necesidades
 	</p>
 </section>
 <section id="area-servicios">
-	<section class="card reverse">
+	<section class="card reverse right-img">
 		<div class="text-wrapper">
 			<div class="content">
 				<h2 class="title">Escuelas infantiles</h2>
@@ -29,7 +29,7 @@ subtitle: Una amplia gama de servicios para tus necesidades
 			</div>
 		</div>
 	</section>
-	<section class="card reverse">
+	<section class="card reverse right-img">
 		<div class="text-wrapper">
 			<div class="content excp">
 				<h2 class="title">Empresas</h2>
