--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,7 @@ email: itnas06@gmail.com
 		</div>
 		<div class="form-group">
 			<label>Nombre</label>
-			<input type="text" name="nombre" required autofocus/>
+			<input type="text" name="nombre" required/>
 		</div>
 		<div class="group-wrapper">
 			<div class="form-group">
@@ -66,7 +66,7 @@ email: itnas06@gmail.com
 				</select>
 				<input id="select-target" type="text" name="" required/>
 			</div>
-			<p>
+			<p class="excp">
 				(En cualquier caso respetamos la confidencialidad de la consulta y respuesta y le contestaremos a la mayor brevedad)
 			</p>
 		</div>
