Arreglos en MQ de pagina de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@ email: itnas06@gmail.com
 	<form id="formulario-contactar" method="POST">
 		<div class="tooltip-wrapper">
 			<p>
-				Si desea contactar <b>personalmente</b> con nosotros puede llamarnos a nuestro
+				Si desea contactar <b>personalmente</b> puede llamarnos a nuestro
 			</p>
 			<div class="tooltip">
 				teléfono (24hs/7d)
