--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ exclude: true
 <section id="index-cover" class="jarallax">
 	<div class="text-wrapper">
 		<h1 class="title">Atención psicológica a la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
-		<h2 class="subtitle">Un nuevo enfoque psicoterapéutico y educativo!</h2>
+		<h2 class="subtitle">Un nuevo enfoque psicoterapéutico y educativo</h2>
 	</div>
 </section>
 <section id="abstract">
