--- a/nuestra_filosofia.html
+++ b/nuestra_filosofia.html
@@ -17,9 +17,9 @@ subtitle: Los nueve principios que nos determinan
 	<li>
 		<div class="text-wrapper">
 			<div class="content">
-				<h1 class="title">Dos coterapeutas por caso</h1>
+				<h1 class="title">Posibilidad de dos coterapeutas por caso</h1>
 				<p>
-					En PsicoNueve, el tratamiento de cada <b>caso concreto</b> es realizado siempre por un equipo formado por <b>dos psicólogos, psicoterapeutas y/o psico-educadores</b> que trabajan con los pacientes de manera conjunta y coordinada, proporcionando un <b>valor superior a la suma de experiencias y de conocimientos.</b> En todas las sesiones con los pacientes, están presentes los dos coterapeutas.
+					En PsicoNueve se puede elegir si la terapia la lleva a cabo un psicólogo, psicoterapeuta y/o psico-educador o un equipo formado por dos de ellos, que trabajarán con los pacientes de manera conjunta y coordinada, proporcionando un valor superior a la suma de experiencias y de conocimientos. 
 				</p>
 			</div>
 		</div>
