--- a/tarifas.html
+++ b/tarifas.html
@@ -10,6 +10,9 @@ subtitle: Nuestras tarifas
 				<p>
 					<b>Oferta:</b> una sesiòn individual 50€. (Válido hasta 31 de diciembre de 2019)
 				</p>
+				<p>
+					La duración de la sesión es entre 50 minutos y una hora. Normalmente dedicamos 50 minutos a la intervención psicológica y los últimos 10 minutos al cierre de la sesión (resolver dudas, dar una nueva cita y despedirnos).
+				</p>
 			</div>
 		</section>
 	</section>
