--- a/tarifas.html
+++ b/tarifas.html
@@ -15,6 +15,17 @@ subtitle: Nuestras tarifas
 				</p>
 			</div>
 		</section>
+		<section class="pareja">
+			<div class="text-wrapper">
+				<h2 class="title">Terapia dual</h2>
+				<p>
+					Posibilidad de terapia <b>dual:</b> 100€.
+				</p>
+				<p>
+					La duración de la sesión es entre 50 minutos y una hora. Normalmente dedicamos 50 minutos a la intervención psicológica y los últimos 10 minutos al cierre de la sesión (resolver dudas, dar una nueva cita y despedirnos).
+				</p>
+			</div>
+		</section>
 	</section>
 	
 
