--- a/tarifas.html
+++ b/tarifas.html
@@ -15,7 +15,7 @@ subtitle: Nuestras tarifas
 				</p>
 			</div>
 		</section>
-		<section class="pareja">
+		<span class="pareja">
 			<div class="text-wrapper">
 				<h2 class="title">Terapia dual</h2>
 				<p>
@@ -25,7 +25,7 @@ subtitle: Nuestras tarifas
 					La duración de la sesión es entre 50 minutos y una hora. Normalmente dedicamos 50 minutos a la intervención psicológica y los últimos 10 minutos al cierre de la sesión (resolver dudas, dar una nueva cita y despedirnos).
 				</p>
 			</div>
-		</section>
+		</span>
 	</section>
 	
 
