--- a/tarifas.html
+++ b/tarifas.html
@@ -15,7 +15,7 @@ subtitle: Nuestras tarifas
 				</p>
 			</div>
 		</section>
-		<span class="pareja">
+		<section class="pareja">
 			<div class="text-wrapper">
 				<h2 class="title">Terapia dual</h2>
 				<p>
