--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,8 @@ email: itnas06@gmail.com
 ---
 <section id="contacto">
 	<div class="data">
-		<h1 class="contact tel">Si llamas en horario de mañana: 695 642 851</h1>
-		<h1 class="contact tel">Si llamas en horario de tarde: 691 023 777</h1>
+		<h1 class="contact tel">695 642 851</h1>
+		<!--h1 class="contact tel">Si llamas en horario de tarde: 691 023 777</h1-->
 		<h1 class="contact mail">psiconueve@gmail.com</h1>
 	</div>
 	<!--div id="map"></div-->
